--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@material-ui/icons": "^4.5.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/react-plotly.js": "^2.2.4",
     "@types/react-redux": "^7.1.5",
     "@types/recharts": "^1.8.4",
     "apollo-boost": "^0.4.7",
     "apollo-link-ws": "^1.0.19",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
+    "plotly.js": "^1.51.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-plotly.js": "^2.4.0",
     "react-redux": "^7.1.3",
     "react-scripts": "^3.2.0",
     "react-toastify": "^5.4.0",
