--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.19",
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
