--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/recharts": "^1.8.4",
     "apollo-boost": "^0.4.7",
     "apollo-link-ws": "^1.0.19",
+    "dash-core-components": "^1.6.0",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
     "plotly.js": "^1.51.3",
